fix spaceship alignment with banner in place

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,6 +6,7 @@
   z-index: 1;
   &__heading {
     font-family: var(--font-code);
+    max-width: 540px;
   }
   &__text {
     max-width: 580px;
