--- a/src/styles/spaceship.scss
+++ b/src/styles/spaceship.scss
@@ -31,7 +31,7 @@
     top: 90px;
 
     &--with-banner {
-      top: 240px;
+      top: 200px;
     }
   }
 }
